topics spacing fix

--- a/ds_layouts/fluid_teaser_layout/fluid_teaser_layout.css
+++ b/ds_layouts/fluid_teaser_layout/fluid_teaser_layout.css
@@ -1,6 +1,6 @@
 .fluid-teaser-row {
-	padding-bottom:10px;
-	margin-bottom:10px;
+	padding-bottom:20px;
+	margin-bottom:21px;
 	border-bottom: 1px #d9d9d9 solid;
 }
 
