--- a/stylesheets/custom-oap.css
+++ b/stylesheets/custom-oap.css
@@ -183,6 +183,14 @@
 	}
 	
 /* Topics Pages */
+	.page-taxonomy-vocabulary-topics .field-name-field-magazine-ref {
+		padding-bottom: 5px;
+	}
+
+	.page-taxonomy-vocabulary-topics .field-name-field-deck .field-item {
+		padding-bottom: 0;
+	}
+
 	.page-topics .view-topics-view h3 {
 		margin: 0 0 1em 0;
 		border-bottom: solid 1px #d9d9d9;
